Bug fix commit Footer was hidden, switch to section tags instead of footer tags Change about me p to text align center Change p css class to target about-p class

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -59,6 +59,7 @@ h3, h4 {
   margin: auto;
   padding: 0;
   overflow-x: hidden;
+  overflow-y: hidden;
   width: 100%;
 }
 .profile-pic {
@@ -218,7 +219,7 @@ section:nth-child(odd) {
   // background-repeat: no-repeat;
   // background-size: cover;
   height: 300px;
-  padding-left: 30px;
+  padding-left: 60px;
   // position: relative;
 }
 
@@ -234,6 +235,10 @@ section:nth-child(odd) {
 
 #about-section {
   background-color: $lightgrey !important;
+}
+
+.about-p {
+  text-align: center;
 }
 
 .projects {
@@ -284,6 +289,9 @@ footer {
 }
 
 // Nav bar
+.navbar-right {
+  margin-right: 10px;
+}
 .navbar-custom {
   background-color: $blue;
   position: absolute;
@@ -562,31 +570,21 @@ footer {
     padding: 20px;
     background-image: none;
   }
+  .about-p {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 
-  // .section {
-  //   min-width: 450px;
-  // }
 }
 
 @media (min-width: 501px) {
   #headline {
     font-size: 36px !important;
   }
-  // .section {
-  //   min-width: 501px;
-  // }
-  .project {
-    // float: left;
-    // display: block;
-    // height: 250px;
-    // margin-left: 2%;
-    // margin-right: 2%;
-    // // width: 48.82117%;
-    // width: 90%;
+  .about-p {
+    margin-left: 30px;
+    margin-right: 30px;
   }
-  // .project:last-child {
-  //   margin-right: 0;
-  // }
 }
 
 @media (min-width: 800px) {
@@ -603,6 +601,11 @@ footer {
   .skills h4:last-child {
     margin-right: 0;
   }
+  .about-p {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
 }
 
 @media (min-width: 1000px) {
